--- a/phone.css
+++ b/phone.css
@@ -1,34 +1,75 @@
-@media screen and (max-width:475px) {
+@media screen and (max-width:675px) {
+    .DivOne {
+        display: flex;
+        justify-content: space-around;
+        height:60px;
+        width: 30%;
+        position: fixed;
+        background-color: black;
+        
+       
+    }
     #mix {
            display: none;
+          
     }
     .mid1 {
         display: none;
+        
     }
     #mid {
         font-size: 9px;
         position: absolute;
         left: 35px;
         top: -10px;
+        
     }
-    .need {
-        margin-left: -30px;
-        margin-top: -20px;
+    /* .need {
+        display: none;
+    } */
+    li {
+        margin-top: 30px;
+        display: none;
+    }
+
     }
     
     .menu {
         display: block;
         position: relative;
         top: 50px;
-        left: -100px;
+        left: -120px;
+       
     }
     #none {
         display: none;
+        background-color: blue;
     }
     .major {
         margin-left: 0px;
         margin-top: 0px;
+        background-color: blue;
     }
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        padding: 100px;
+        gap: 20px;
+        margin-left: -40px;
+        width: 20px;  
+    }
+
+    #apple {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 60px;
+        background-color: red;
+    }
+    
+    
+    
 
 
 
