--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-/* * { 
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-d
-}
-/* .contaidms: c
-} */
 body {
     overflow-x: hidden;
     margin: 0px;
@@ -17,6 +8,8 @@ body {
     justify-content: space-around;
     background-color: rgb(245, 239, 239);
     height:60px;
+    width: 100%;
+    position: fixed;
 }
 span {
     position: relative;
@@ -24,10 +17,10 @@ span {
     left: -41%;
 }
 .menu {
-    background-color: white;
-    color: black;
-    width: 50px;
     display: none;
+}
+.mmm {
+    color: aqua;
 }
 
 
@@ -40,16 +33,6 @@ span {
     margin-top: 30px;
     list-style-type: none;
 }
-/* #div1{
-    margin-right: -00px;
-}
-#div2 {
-    margin-left: -150px;
-}
-#div3 {
-    margin-left: -200px;
-} */
-
 
 .nav {
     display: flex;
@@ -57,6 +40,7 @@ span {
     background-color: rgb(236, 232, 217);
     width: 100%;
     padding-left: 40px;
+    padding-top: 60px;
     
 }
 
@@ -103,11 +87,16 @@ input {
     height: 75px;
     margin-top: 10px;
 }
+.mm {
+    position: absolute;
+    left: -560px;
+    top: -10px;
+}
 
 .ima {
     position: absolute;
     top: 200px;
-    left: 800px;
+    left: 900px;
 }
 .popular {
     display: flex;
@@ -241,7 +230,7 @@ button {
 }
 
 .apple {
-    border: px solid red;
+    border: 0px solid red;
     height: 360px;
     width: 300px;
     box-shadow: 1px 0px 2px  0px black;
@@ -249,7 +238,8 @@ button {
 }
 .apple:nth-child(2) {
     position: absolute;
-    left: 380px;
+    left: 390px;
+    top: 308%;
 }
 
 .source:hover {
@@ -294,21 +284,21 @@ button {
 .tet {
     float: left;
     position: absolute;
-    top: 438%;
-    left: 70%;
+    top: 460%;
+    left: 68%;
     
 }
 .ebe {
      position: absolute;
-     left: 75%;
-     top: 435%;
+     left: 71%;
+     top: 459%;
 }
 .ebele {
     padding-left: 60px;
 }
 .con {
     position: absolute;
-    top: 420%;
+    top: 440%;
     font-size: 30px;
     left: 50px;
 }
@@ -337,7 +327,7 @@ button {
 }
 .zoom {
     position: absolute;
-    top: 480%;
+    top: 505%;
     font-size: 30px;
     left: 50px;
 }
@@ -353,6 +343,7 @@ button {
 .vee {
     background-color: whitesmoke;
     padding: 60px;
+    
 }
 #doom {
     font-size: 30px;
@@ -362,8 +353,12 @@ button {
     gap: 20px;
     height: 20vh;
     width: 100%;
-    justify-content:space-evenly;
+    justify-content:space-around;
     align-items:center;
+}
+#mijj {
+    text-decoration: underline;
+    padding-left: 47px;
 }
 
 .aba:nth-child(1) {
@@ -386,7 +381,7 @@ button {
     height: 20%;
     width: 20%;
 }
-#mix {
+#mif {
     text-decoration: underline;
 }
 
