--- a/phone.css
+++ b/phone.css
@@ -1,76 +1,292 @@
-@media screen and (max-width:675px) {
+@media (max-width:500px) {
+    #mix {
+        display: none;
+    }
     .DivOne {
         display: flex;
         justify-content: space-around;
+        background-color: rgb(247, 246, 244);
         height:60px;
-        width: 30%;
+        width: 68%;
         position: fixed;
-        background-color: black;
-        
-       
     }
-    #mix {
-           display: none;
-          
+    .great {
+        margin-left: -10px;
+        font-size: 10px;
     }
     .mid1 {
         display: none;
-        
     }
-    #mid {
-        font-size: 9px;
-        position: absolute;
-        left: 35px;
-        top: -10px;
-        
+    .git{
+        margin-left: 10px;
+        font-size: 10px;
     }
-    /* .need {
+    .need {
+        margin-left: -50px;
+        margin-top: -10px;
+    }
+    .mmm {
+        margin-left: -px;
         display: none;
-    } */
-    li {
+    }
+    .skill {
+        position: relative;
+        top: 5px;
+        left: -130px;
+    }
+    .ada{
+        display: none;
+    }
+    .hiv {
+        margin-left: -105px;
+        margin-top: -100px;
+    }
+    .power {
         margin-top: 30px;
-        display: none;
+        font-size: small;
+        margin-left: -60px;
     }
-
+    .microsoft {
+        display: flex;
+        justify-content: space-between;
+        background-color: rgb(236, 232, 217);
+        height: 380px;
+        width: 70%;
+        padding-left: 60px;
     }
-    
+    .nav {
+        display: flex;
+        border: px solid;
+        background-color: rgb(236, 232, 217);
+        width: 70%;
+        padding-left: 40px;
+        padding-top: 60px;
+        
+    }
     .menu {
         display: block;
+        margin-top: 70px;
+        margin-left: -130px;
+        background-color: white;
+        color: black;
+        width: 60px;
+    }
+    .quality {
+        font-size: 30px;
+        margin-left: -50px;
+        color: rgb(56, 74, 98);
+    }
+    .ship {
+        font-size: 20px;
         position: relative;
-        top: 50px;
-        left: -120px;
-       
+        top: -10px;
+        left: -40px;
+        color: rgb(112, 128, 149);
+    
     }
-    #none {
+    .what {
+        position: relative;
+        top: -10px;
+        left: -30px;
+        color: rgb(56, 74, 98);
+    }
+    input {
+        border: px solid black;
+        width: 80vw;
+        margin-left: -50px;
+        height: 60px;
+        margin-top: 10px;
+    }
+    .mm {
+        position: absolute;
+        left: -400px;
+        top: -70px;
+    }
+    .kk {
+        position: absolute;
+        left: 1077px;
+        top: 88%;
+        color: brown;
+        font-size: large;
         display: none;
-        background-color: blue;
     }
-    .major {
-        margin-left: 0px;
-        margin-top: 0px;
-        background-color: blue;
+    .ima {
+        display: none;
     }
-
     .container {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
         padding: 100px;
         gap: 20px;
-        margin-left: -40px;
+        margin-left: -80px;
         width: 20px;  
     }
-
+    .off {
+        color: red;
+        position: absolute;
+        left: 1077px;
+        display: none;
+    }
     #apple {
         display: grid;
         grid-template-columns: 1fr;
+        margin-left: -50px;
+        padding: 50px;
+       
+    }
+    .popular {
+        margin-top: -50px;
+    }
+    #nigga {
+        margin-top: 100px;
+    }
+    #niger {
+        margin-top: 360px;
+        width: 60%;
+    }
+    #anchor {
+        width: 120%;
+    }
+    .con {
+        position: absolute;
+        top: 950%;
+        font-size: 30px;
+        left: 20px;
+    }
+    #linux {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
         padding: 60px;
+    }
+    #wu {
+        position: absolute;
+        top: 860%;
+        left: 0%;
+    }
+    .twitter {
+        border: 0px solid ;
+        height: 200px;
+        margin-top: -10px;
+        width: 250px;
+        margin-left: -40px;
+        box-shadow: 1px 0px 2px  0px black;
+        cursor: pointer;
+        background-color: white;
+    }
+    #hi {
+        margin-top: 10px;
+        margin-left: -40px;
+        width: 100%;
+    }
+    #h {
         background-color: red;
     }
+    .tet {
+        float: left;
+        position: absolute;
+        top: -475%;
+        left: 68%;
+        
+    }
+    .tent {
+        border: px solid yellow;
+        width: 100vw;
+        height: 100vh;
+        margin-top: 140px;
+        background-color: rgb(205, 219, 219);
+    }
+    .ebe {
+         position: absolute;
+         left: 11%;
+         top: 1040%;
+         height: 20%;
+    }
+    .tit {
+        border: 0px solid ;
+        height: 170px;
+        margin-top: 300px;
+        width: 350px;
+        box-shadow: 1px 0px 2px  0px black;
+        cursor: pointer;
+        background-color: white;
+    }
+    .zoom {
+        position: absolute;
+        top: 1065%;
+        font-size: 20px;
+        left: 20px;
+    }
+    .face {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 50px;
+        padding-top: -100px;
+        margin-left: -120px;
+    }
+    #co {
+        margin-top: -100px;
+    }
+    #c {
+        margin-top: -100px;
+    }#doom {
+        font-size: 20px;
+        margin-top: -120px;
+    }
+    .cus {
+        flex-direction: column;
+        gap: 20px;
+        height: 100vh;
+        width: 100%;
+        margin-left: -100px;
+        justify-content:space-around;
+        align-items:center;
+    }
+    #mijj {
+        text-decoration: underline;
+        width: 100%;
+        display: inline;
+        display: flex;
+    }
     
-    
-    
-
-
-
+    .aba:nth-child(1) {
+        height: 20%;
+        width: 20%;
+    }
+    .aba:nth-child(2) {
+        height: 20%;
+        width: 20%;
+    }
+    .aba:nth-child(3) {
+        height: 20%;
+        width: 20%;
+    }
+    .aba:nth-child(4) {
+        height: 20%;
+        width: 20%;
+    }
+    .aba:nth-child(5) {
+        height: 20%;
+        width: 20%;
+    }
+    #side {
+        margin-left: -100px;
+    }
+    #sid {
+        margin-left: -200px;
+        margin-top: 100px;
+       
+    }
+  #siz {
+    width: 100%;
+    background-color: red;
+  }
+  #fade {
+    display: grid;
+    grid-template-columns: 1fr;
+    background-color: rgb(56, 74, 98);
+}    
+.fad {
+    margin-left: 20px;
+}
 }
